change in something

--- a/index.html
+++ b/index.html
@@ -17,16 +17,49 @@
     <section class="section w-100 min-vh-100 d-flex justify-content-center align-items-center">
         <div class="container d-flex justify-content-center align-items-center pt-5">
             <div class="price-main-box d-flex justify-content-center position-relative">
-            <div class="price-txt-box position-relative justify-content-center d-flex align-items-center flex-column">
-            <div class="eighty-nine">₹899</div>
-            <div class="reservation text-center">4 reservation left to ₹699</div>
+                <div
+                    class="price-txt-box position-relative justify-content-center d-flex align-items-center flex-column">
+                    <div class="eighty-nine">₹899</div>
+                    <div class="reservation text-center">4 reservation left to ₹699</div>
+                </div>
+                <div class="black-layer position-absolute d-none d-lg-inline-block"></div>
+                <div class="txt-1 commen-txt position-lg-absolute d-none d-lg-inline-block">₹1,299</div>
+                <div class="txt-2 commen-txt position-lg-absolute d-none d-lg-inline-block">₹1,099</div>
+                <div class="txt-3 commen-txt position-lg-absolute d-none d-lg-inline-block">₹999</div>
+                <div class="txt-4 commen-txt position-lg-absolute d-none d-lg-inline-block">₹899</div>
+                <div class="txt-5 commen-txt position-lg-absolute d-none d-lg-inline-block">₹699</div>
             </div>
-            <div class="black-layer position-absolute"></div>
-            <div class="txt-1 commen-txt position-absolute">₹1,299</div>
-            <div class="txt-2 commen-txt position-absolute">₹1,099</div>
-            <div class="txt-3 commen-txt position-absolute">₹999</div>
-            <div class="txt-4 commen-txt position-absolute">₹899</div>
-            <div class="txt-5 commen-txt position-absolute">₹699</div>
+        </div>
+    </section>
+    <section class="section d-flex justify-content-center align-items-sm-start min-vh-75 w-100 d-lg-none">
+        <div class="container d-flex justify-content-center">
+            <div class="timeline">
+                <div class="txt right">
+                    <div class="content">
+                        <div class="txt-1 commen-txt position-lg-absolute d-inline-block d-lg-none">₹1,299</div>
+                    </div>
+                </div>
+                <div class="txt right">
+                    <div class="content">
+                        <div class="txt-2 commen-txt position-lg-absolute d-inline-block d-lg-none">₹1,099</div>
+                    </div>
+                </div>
+                <div class="txt right">
+                    <div class="content">
+                        <div class="txt-3 commen-txt position-lg-absolute d-inline-block d-lg-none">₹999</div>
+                    </div>
+                </div>
+                <div class="txt right">
+                    <div class="content">
+                        <div class="txt-4 commen-txt position-lg-absolute d-inline-block d-lg-none">₹899</div>
+
+                    </div>
+                </div>
+                <div class="txt right">
+                    <div class="content">
+                        <div class="txt-5 commen-txt position-lg-absolute d-inline-block d-lg-none">₹699</div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
